Various editing and corrections and added MA 80 translation.

--- a/02_madhyama/01_First/01_Sevens/MA_004.md
+++ b/02_madhyama/01_First/01_Sevens/MA_004.md
@@ -10,73 +10,118 @@ next: MA_005.html
 ## [Chapter 1: Sevens](index.html)
 ### 4. The Water Parable
 
-Thus I have heard: One time, the Buddha traveled to the kingdom of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+{: #p1}
 
-At that time, the Bhagavān addressed the monks, “I will explain for you the seven people in water. Listen closely, listen closely! Well consider and remember it.”
-
-The monks then accepted the teaching and listened.
-
-The Buddha said, “What are the seven? (1) There’s a person who stays prostrate in the water. (2) There’s a person who emerges from the water but goes back under. (3) There’s a person who emerges from the water and stands up. (4) There’s a person who emerges from the water, stands up, and looks around after standing up. (5) There’s a person who emerges from the water, stands up, looks around after standing up, and wades across after looking around. (6) There’s a person who emerges from the water, stands up, looks around after standing up, wades across after looking around, and reaches the other shore after wading across. (7) There’s a person who emerges from the water, stands up, looks around after standing up, wades across after looking around, reaches the other shore after wading across, and who’s called a person standing on the shore after reaching the other shore.
-
-“Thus, I will again explain the people of these seven water metaphors. Listen closely, listen closely! Well consider and remember it.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the seven people in water for you. Listen closely, listen closely! Well consider it.”
+{: #p2}
 
 The monks then accepted the teaching and listened.
 
-The Buddha said, “What are the seven? (1) There’s a person who stays prostrate. (2) There’s also a person who goes back under after emerging. (3) There’s also a person who stands up after emerging. (4) There’s also a person who stands up after emerging and looks around after standing up. (5) There’s also a person who stands up after emerging, looks around after standing up, and wades across [424b] after looking around. (6) There’s also a person who stands up after emerging, looks around after standing up, wades across after looking around, and reaches the other side after wading across. (7) There’s also a person who stands up after emerging, looks around after standing up, wades across after looking around, reaches the other side after wading across, and who’s called a priest standing on the shore after reaching the other shore.
+3\. The Buddha said, “What are the seven? Sometimes a person lies prostrate in the water.[\[2\]](#n2){:#ref2} Sometimes a person emerges from the water but goes back under. Sometimes a person emerges from the water and stands up. Sometimes a person emerges from the water, stands up, and looks around after standing up. Sometimes a person emerges from the water, stands up, looks around after standing up, and wades across after looking around. Sometimes a person emerges from the water, stands up, looks around after standing up, wades across after looking around, and reaches the other shore after wading across. Sometimes a person emerges from the water, stands up, looks around after standing up, wades across after looking around, reaches the other shore after wading across, and is called a person who stands on shore after reaching the other shore.
+{: #p3}
 
-“These are the people of the seven water metaphors. I have taught it briefly, but do you know what it means as it’s been described and as it’s been defined? How is it to be discerned? What circumstances does it have?”
-
-The monks then said to the Bhagavān, “The Bhagavān is the basis of the Dharma! The Bhagavān is the Dharma lord! The Dharma comes from the Bhagavān! Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
-
-The Buddha then addressed them, “All of you, listen closely! Well consider and remember it. I will discern its meaning for you.”
-
+4\. “Thus, I will again explain the people of these seven water metaphors. Listen closely, listen closely! Well consider it.”
 The monks then accepted the teaching and listened.
+{: #p4}
 
-The Buddha said, “How does a person stay prostrate? It means a person is covered up by unwholesome things. He is stained by defilements, experiences the results of evil things, and creates the basis of birth-and-death.
+5\. The Buddha said, “What are the seven? Sometimes a person lies prostrate. Another person goes back under after emerging. Another person stands up after emerging. Another person stands up after emerging, and they look around after standing up. Another person stands up after emerging, they look around after standing up, and they wade across [424b] after looking around. Another person stands up after emerging, they look around after standing up, they wade across after looking around, and they reach the other side after wading across. Another person stands up after emerging, they look around after standing up, they wade across after looking around, they reach the other side after wading across, and they’re called a priest standing on shore after reaching the other shore.
+{: #p5}
 
-“This is called the person who stays prostrate. He’s like a person who is submerged and prostrate in the water. I say that person is likewise. This is called the person of the first water metaphor. The world in truth does have such people.
+6\. “These are the people of the seven water metaphors, which I have explained briefly. Do you know what it means as it’s been described and as it’s been defined? How is it to be discerned? What causes and conditions are there?”
+{: #p6}
 
-“How does a person go back under after emerging? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. At some time later, he loses his faith; it isn’t resolute. He loses his observance of precepts, generosity, learning, and wisdom; they aren’t resolute.
+7\. The monks then said to the Bhagavān, “The Bhagavān is the basis of the Dharma! The Bhagavān is the Dharma lord! The Dharma comes from the Bhagavān! Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
+{: #p7}
 
-“This is called the person who goes back under after emerging. He’s like a person who is submerged in water and goes back under after emerging. I say that person is likewise. This is called the person of the second water metaphor. The world in truth does have such people.
+8\. The Buddha then addressed them, “All of you, listen closely, and well consider it. I will discern its meaning for you.”
+The monks then accepted the teaching and listened.
+{: #p8}
 
-“How does a person stand up after emerging? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. At some time later, his faith remains resolute; it isn’t lost. His observance of precepts, generosity, learning, and wisdom are resolute; they are not lost.
+#### 1\. The Person Who Lies Prostrate
 
-“This is called the person who stands up after emerging. He’s like the person who is submerged in water and stands up after emerging. I say that person is likewise. This is called the person of the third water metaphor. The world in truth does have such people.
+9\. The Buddha said, “How does a person lie prostrate? It means a person is covered up by unwholesome things. They are stained by defilements, which bring the results of bad things and create the basis of birth-and-death.
+{: #p9}
 
-“How does a person stand up after emerging and look around after standing? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. At some time later, his faith remains resolute; it isn’t lost. His observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+10\. “This is called the person who lies prostrate. He’s like a person who’s submerged and lies prostrate in water. I say this person is likewise. This is called the person of the first water metaphor. The world in truth does have such people.
+{: #p10}
 
-“Abiding in the good Dharma, he knows suffering as it really is. He knows suffering’s cultivation, knows suffering’s cessation, and knows the path to the cessation of suffering as they really are. Thus knowing and thus seeing, he readily ends the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds have ended, he becomes a stream entrant and doesn’t fall into evil things. Certainly destined for right awakening, [424c] he will experience at most seven existences. After seven rebirths up in the heavens or here among humans, he will readily attain the limit of suffering.
+#### 2\. The Person Who Goes Back Under
 
-“This is called the person who stands up after emerging and looks around after standing. He’s like a person submerged in water who stands up after emerging and looks around after standing up. I say that person is likewise. This is called the person of the fourth water metaphor. The world in truth does have such people.
+11\. “How does a person go back under after emerging? It means a person has emerged and attained faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, they lose their faith; it wasn’t resolute. They lose their observance of precepts, generosity, learning, and wisdom; they weren’t resolute.
+{: #p11}
 
-“How does a person stand up after emerging, look around after standing, and wade across after looking around? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. At some time later, his faith remains resolute; it isn’t lost. His observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+12\. “This is called the person who goes back under after emerging. They’re like a person who’s submerged in water and goes back under after emerging. I say this person is likewise. This is called the person of the second water metaphor. The world in truth does have such people.
+{: #p12}
 
-“Abiding in the good Dharma, he knows suffering as it really is. He knows suffering’s cultivation, knows suffering’s cessation, and knows the path to the cessation of suffering as they really are. Thus knowing and thus seeing, he readily ends the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds are ended, lust, hate, and delusion are weakened. He attains one rebirth up in the heavens or here among humans. After one rebirth, he will readily attain the limit of suffering.
+#### 3\. The Person Who Stands Up
 
-“This is called the person who stands up after emerging, looks around after standing, and wades across after looking around. He’s like a person submerged in water who stands up after emerging, looks around after standing, and wades across after looking around. I say that person is likewise. This is called the person of the fifth water metaphor. The world in truth does have such people.
+13\. “How does a person stand up after emerging? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+{: #p13}
 
-“How does a person stand up after emerging, look around after standing, wade across after looking around, and reach the other shore after wading across? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. At some time later, his faith remains resolute; it isn’t lost. His observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+14\. “This is called the person who stands up after emerging. They’re like the person who’s submerged in water and stands up after emerging. I say this person is likewise. This is called the person of the third water metaphor. The world in truth does have such people.
+{: #p14}
 
-“Abiding in the good Dharma, he knows suffering as it really is. He knows suffering’s cultivation, knows suffering’s cessation, and knows the path to the cessation of suffering as they really are. Thus knowing and thus seeing, he readily ends the five lower bonds, which are desire, anger, belief in the individual, adherence to precepts, and doubt. Once these five lower bonds have ended, he’s born elsewhere and readily attains parinirvāṇa. He attains irreversibility and doesn’t return to this world.
+#### 4\. The Person Who Looks Around
 
-“This is called the person who stands up after emerging, looks around after standing, wades across after looking around, and reaches the other shore after wading across. He is like a person submerged in water who stands up after emerging, looks around after standing, wades across after looking around, and reaches the other shore after wading across. I say that person is likewise. This is the person of the sixth water metaphor. The world in truth does have such people.
+15\. “How does a person stand up after emerging and look around after standing? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+{: #p15}
 
-“How does a person stand up after emerging, look around after standing, wade across after looking around, reach the other shore after wading across, and who’s called a priest standing on the shore after reaching the other shore? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, learned, and wise, he cultivates the good Dharma. [425a] At some time later, his faith remains resolute; it isn’t lost. His observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+16\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, knows suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds have ended, they become a stream entrant and don’t fall into bad states. They’re certainly destined for right awakening [424c] and will experience at most seven existences. After seven rebirths up in the heavens or here among humans, they will readily attain the limit of suffering.
+{: #p16}
 
-“Abiding in the good Dharma, he knows suffering as it really is. He knows suffering’s cultivation, knows suffering’s cessation, and knows the path to the cessation of suffering as they really are. Thus knowing and thus seeing, his mind is liberated from the contaminants of desire and liberated from the contaminants of existence and ignorance. After being liberated, he readily knows that he is liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is.
+17\. “This is called the person who stands up after emerging and looks around after standing. They’re like a person submerged in water who stands up after emerging and looks around after standing up. I say that person is likewise. This is called the person of the fourth water metaphor. The world in truth does have such people.
+{: #p17}
 
-“This is called the person who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and who’s called a priest who stands on the shore after he reaches the other shore. He is like a person submerged in water who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and who’s called someone who stands on the shore after reaching the other shore. I say that person is likewise. This is called the person of the seventh water metaphor. The world in truth does have such people.
+#### 5\. The Person Who Wades Across
 
-“I had said, ‘I will explain for you the seven people in water for you,’ and for that reason I have explained it.”
+18\. “How does a person stand up after emerging, look around after standing, and wade across after looking around? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+{: #p18}
 
-The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and handed it down.
+19\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, know suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds are ended, lust, hate, and delusion are weakened. They attain one rebirth up in the heavens or here among humans. After one rebirth, they’ll readily attain the limit of suffering.
+{: #p19}
+
+20\. “This is called the person who stands up after emerging, looks around after standing, and wades across after looking around. They’re like a person submerged in water who stands up after emerging, looks around after standing, and wades across after looking around. I say this person is likewise. This is called the person of the fifth water metaphor. The world in truth does have such people.
+{: #p20}
+
+#### 6\. The Person Who Reaches Shore
+
+21\. “How does a person stand up after emerging, look around after standing, wade across after looking around, and reach the other shore after wading across? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+{: #p21}
+
+22\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, know suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the five lower bonds, which are desire, anger, belief in the individual, adherence to precepts, and doubt. Once these five lower bonds have ended, they’re born elsewhere and readily attain parinirvāṇa. They attain irreversibility and don’t return to this world.
+{: #p22}
+
+23\. “This is called the person who stands up after emerging, looks around after standing, wades across after looking around, and reaches the other shore after wading across. They are like a person submerged in water who stands up after emerging, looks around after standing, wades across after looking around, and reaches the other shore after wading across. I say this person is likewise. This is the person of the sixth water metaphor. The world in truth does have such people.
+{: #p23}
+
+#### 7\. The Person Who’s Called a Priest on the Other Shore
+
+24\. “How does a person stand up after emerging, look around after standing, wade across after looking around, reach the other shore after wading across, and is called a priest standing on shore after reaching the other shore? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. [425a] At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
+{: #p24}
+
+25\. “Abiding in the good Dharma, they know suffering as it really is. They know suffering’s cultivation, know suffering’s cessation, and know the path to the cessation of suffering as they really are. Thus knowing and thus seeing, their mind is liberated from the contaminants of desire, and it’s liberated from the contaminants of existence and ignorance. After being liberated, they readily know that they are liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ They are no longer subject to existence and know it as it really is.
+{: #p25}
+
+26\. “This is called the person who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and is called a priest standing on shore after reaching the other shore. They’re like a person submerged in water who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and is called someone who stands on shore after reaching the other shore. I say this person is likewise. This is called the person of the seventh water metaphor. The world in truth does have such people.
+{: #p26}
+
+27\. “I had said, ‘I will explain the seven people in water for you,’ and for this reason I have explained it.”
+{: #p27}
+
+28\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+{: #p28}
+
+### Notes
+
+1. {:#n1} The Pali counterpart to this sutra is [AN 7.15](https://suttacentral.net/an7.15/en/sujato){: target="_blank"}. [\[Back\]](#ref1)
+2. {:#n2} *lies prostrate*. Lit. "constantly lies." [\[Back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 18 February 2020
+Last Revised: 2 May 2020
 {: .revised}
 
 ---
