--- a/02_madhyama/01_First/01_Sevens/MA_007.md
+++ b/02_madhyama/01_First/01_Sevens/MA_007.md
@@ -9,56 +9,77 @@ previous: MA_006.html
 ## [Chapter 1: Sevens](index.html)
 ### 7. Worldly Merit
 
-Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.[\[1\]](#n1){:#ref1}
+1\. Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.[\[1\]](#n1){: #ref1}
+{:#p1}
 
-At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he bowed and withdrew to sit at one side. He said, “Bhagavān, would it be possible to define worldly merit?”
+#### The Seven Worldly Merits
 
-The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give monasteries and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+2\. At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he paid homage and withdrew to sit at one side. He said, “Bhagavān, is it possible to define worldly merit?”
+{:#p2}
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){:#ref2} This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+3\. The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, great reward, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give living quarters and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+{:#p3}
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+4\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){: #ref2} This, Cunda, is the second worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+{:#p4}
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery, and they give additional offerings to the monastery when there are rain and snow storms, so the assembly of monks aren’t troubled after eating about the bad weather making their robes wet. Day and night, they meditate and contemplate in comfort instead. This, Cunda, is the seventh worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+5\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+{:#p5}
 
-“Cunda, for faithful clansmen and clanswomen who have obtained these seven worldly merits, their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.
+6\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery and give additional offerings to the monastery when there are rain and snowstorms. After they eat, the assembly of monks then isn’t troubled by the bad weather making their robes wet. Day and night, they meditate and contemplate in comfort, instead. This, Cunda, is the seventh worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+{:#p6}
 
-“Cunda, it’s like the Gaṅgā River, which flows from it’s source to the ocean. It becomes deeper and wider as it goes. Thus, Cunda, are faithful clansmen and clanswomen who have obtained these seven worldly merits. Their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.”
+7\. “Cunda, for faithful clansmen and clanswomen who have obtained these seven worldly merits, their merits will always arise and becoming greater and broader whether in the past or future, while standing or sitting, while asleep or awake, or during day or night.
+{:#p7}
 
-Venerable Mahācunda then rose from his seat, adjusted his robes from his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define the merits that transcend the world?”
+8\. “Cunda, it’s like the Gaṅgā River, which flows from its source to the ocean. It becomes deeper and wider as it goes. Thus, Cunda, are these seven worldly merits obtained by faithful clansmen and clanswomen. Their merits will always arise, becoming greater and broader whether in the past or future, while standing or sitting, while asleep or awake, or during day or night.”
+{:#p8}
 
-The Bhagavān addressed him, “It’s possible to define the merits that transcend the world. There are another seven merits that transcend the world and obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have traveled to a certain place, [428b] and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.
+#### The Seven Merits that Transcend the World
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own, and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.
+9\. Venerable Mahācunda then rose from his seat, bared his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define the merits that transcend the world?”
+{:#p9}
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have arrived from there, and they rejoice upon hearing it, celebrating in their hearts. They go personally to see them with a pure heart, and they pay their respects and make offerings. Once they had made offerings, they thrice take refuge in the Buddha, teaching, and community of monks, and they accept the precepts. This, Cunda is the seventh merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.
+10\. The Bhagavān told him, “It’s possible to define the merits that transcend the world. There are another seven merits that transcend the world and obtain great fortune, great reward, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of  his disciples have traveled to a certain place. [428b] They rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+{:#p10}
 
-“Cunda, if a faithful clansmen and clanswomen were to attain these seven worldly merits and these other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.
+11\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own. They rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+{:#p11}
 
-“Cunda, it’s like the five rivers that are in Jambudvīpa: 1. The Gaṅgā, 2. Yamunā, 3. Sarabhu, 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. The volume that it possesses simply cannot be delimited, cannot be measured, and the amount of water cannot be found.
+12\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have arrived. They rejoice upon hearing it, celebrating in their hearts. They go personally to see them with a pure heart, and they pay their respects and make offerings. Once they had made offerings, they thrice take refuge in the Buddha, teaching, and community of monks and accept the precepts. Cunda, this is the seventh merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+{:#p12}
 
-“Cunda, if such a faithful clansman or clanswoman attains these seven worldly merits and those other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.”
+13\. “Cunda, if faithful clansmen and clanswomen were to attain these seven worldly merits and these other seven merits that transcend the world, their merits would be incalculable. Such merits, the results of such merits, and the rewards of such merits they possess simply cannot be delimited or measured, and the number of those great merits cannot be found.
+{:#p13}
 
-At that time, the Bhagavān spoke in verse:
+14\. “Cunda, it’s like the five rivers that are in Jambudvīpa: 1. the Gaṅgā, 2. Yamunā, 3. Sarabhū, 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. The volume that it possesses simply cannot be delimited or measured, and the amount of water cannot be found.
+{:#p14}
 
-* {:.verse} “The Gaṅgā River\\
-  Is clean and easy to cross;\\
-  The ocean with many treasures\\
-  Is the king of myriad rivers.
-* {:.verse} Like a river’s flow,\\
-  A worldly person bows low;\\
-  That’s where streams return\\
-  As they go forth into the ocean.
-* {:.verse} Such a person\\
-  Gives clothes, food, and drink;\\
-  [428c] Beds, sofas, mats,\\
-  And things upon which to sit.
-* {:.verse} Measureless rewards of merit\\
-  Lead him to a marvelous place;\\
-  He’s like the river’s flow\\
-  Going forth into the ocean.”
+15\. “Cunda, if such faithful clansmen or clanswomen attain these seven worldly merits and those other seven merits that transcend the world, their merits would be incalculable. Such merits, the results of such merits, and the rewards of such merits they possess simply cannot be delimited or measured, and the number of those great merits cannot be found.”
+{:#p15}
 
-The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha had taught rejoiced and handed it down.
+16\. At that point, the Bhagavān spoke in verse:
+{:#p16}
+
+* {:.verse}“The Gaṅgā River\\
+Is clean and easy to cross;\\
+The ocean with its many treasures\\
+Is the king of myriad rivers.
+* {:.verse}Like a river flows,\\
+A worldly person bows low;\\
+That’s where all streams return,\\
+Going forth into the ocean.
+* {:.verse}Such a person\\
+Gives clothes, food, and drink,\\
+Beds, sofas, and mats,\\
+[428c] And things upon which to sit.
+* {:.verse}Measureless rewards of merit\\
+Lead to a marvelous place;\\
+They’re like the river’s flow,\\
+Going forth into the ocean.”
+
+17\. The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha taught rejoiced and handed it down.
+{:#p17}
 
 ### Notes
 
@@ -69,7 +90,7 @@ The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 18 February 2020
+Last Revised: 5 May 2020
 {: .revised}
 
 ---
