--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
@@ -26,7 +26,7 @@ next: MA_077.html
 5\. “Again, contemplate the inner and outer body as body, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
 {: #p5}
 
-6\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, laying, asleep, awake, and waking up, you should also cultivate it.
+6\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, lying, asleep, awake, and waking up, you should also cultivate it.
 {: #p6}
 
 7\. “Furthermore, you should cultivate concentration with perception and contemplation, concentration with no perception and some contemplation, and concentration without perception or contemplation. You should also cultivate concentration together with joy, concentration together with happiness, concentration together with concentration, and concentration together with equanimity.
@@ -41,7 +41,7 @@ next: MA_077.html
 10\. “Again, contemplate inner and outer feelings as feelings, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
 {: #p10}
 
-11\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, laying, asleep, awake, and waking up, you should also cultivate it.
+11\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, lying, asleep, awake, and waking up, you should also cultivate it.
 {: #p11}
 
 12\. “Furthermore, you should cultivate concentration with perception and contemplation, concentration with no perception and some contemplation, and concentration without perception or contemplation. You should also cultivate concentration together with joy, concentration together with happiness, concentration together with concentration, and concentration together with equanimity.
@@ -56,7 +56,7 @@ next: MA_077.html
 15\. “Again, contemplate the inner and outer mind as mind, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
 {: #p15}
 
-16\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, laying, asleep, awake, and waking up, you should also cultivate it.
+16\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, lying, asleep, awake, and waking up, you should also cultivate it.
 {: #p16}
 
 17\. “Furthermore, you should cultivate concentration with perception and contemplation, concentration with no perception and some contemplation, and concentration without perception or contemplation. You should also cultivate concentration together with joy, concentration together with happiness, concentration together with concentration, and concentration together with equanimity.
@@ -71,7 +71,7 @@ next: MA_077.html
 20\. “Again, contemplate inner and outer mental objects as mental objects, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
 {: #p20}
 
-21\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, laying, asleep, awake, and waking up, you should also cultivate it.
+21\. “Monk, according to these concentrations, when you depart and arrive, cultivate goodness. When you’re standing, sitting, lying, asleep, awake, and waking up, you should also cultivate it.
 {: #p21}
 
 22\. “Furthermore, you should cultivate concentration with perception and contemplation, concentration with no perception and some contemplation, and concentration without perception or contemplation. You should also cultivate concentration together with joy, concentration together with happiness, concentration together with concentration, and concentration together with equanimity.
