--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_078.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_078.md
@@ -42,10 +42,10 @@ next: MA_079.html
 9\. “What’s the reason for that? This Brahmā of the Brahma Heaven is the Fortunate, the Transformer, the Exalted, the Maker, the Creator, and the Father. All the sentient beings who have existed and will exist are born from him. This is known by those of complete knowledge and seen by those of complete vision.
 {: #p9}
 
-10\. “Great sage, if a mendicant or a brahmin detests earth and criticizes earth, then he surely will be born among lowly entertainer spirits when his body breaks up and his life ends.[\[1\]](#n2){: #ref2} So it is with water, fire, air, spirits, gods, and the Lord Creator.[\[2\]](#n1){: #ref1} Detesting Brahmā and criticizing Brahmā, he surely will be born among some lowly entertainer spirits when his body breaks up and his life ends.
+10\. “Great sage, if a mendicant or a priest detests earth and criticizes earth, then he surely will be born among lowly entertainer spirits when his body breaks up and his life ends.[\[1\]](#n2){: #ref2} So it is with water, fire, air, spirits, gods, and the Lord Creator.[\[2\]](#n1){: #ref1} Detesting Brahmā and criticizing Brahmā, he surely will be born among some lowly entertainer spirits when his body breaks up and his life ends.
 {: #p10}
 
-11\. “Great sage, if a mendicant or a brahmin loves earth and praises earth, then he surely will be born in the most exalted Brahma Heaven when his body breaks up and his life ends. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, he surely will be born in the most exalted Brahma Heaven when his body breaks up and his life ends. Great sage, don’t you see this Brahmā retinue seated here as my group?”
+11\. “Great sage, if a mendicant or a priest loves earth and praises earth, then he surely will be born in the most exalted Brahma Heaven when his body breaks up and his life ends. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, he surely will be born in the most exalted Brahma Heaven when his body breaks up and his life ends. Great sage, don’t you see this Brahmā retinue seated here as my group?”
 {: #p11}
 
 12\. That Māra Pāpīyān was not a Brahmā, nor one of Brahmā’s retinue. Still, he made the claim, “I am a Brahmā.” It was then that the Bhagavān had this thought, “This Māra Pāpīyān is not a Brahmā, nor one of Brahmā’s retinue. Still, he makes the claim, ‘I am a Brahmā.’ Suppose I said, ‘There is Māra Pāpīyān! Right here is Māra Pāpīyān!’?”
@@ -65,25 +65,25 @@ next: MA_079.html
 16\. The Bhagavān also said three times, “Brahmā, you are saying what’s impermanent is permanent, what’s not eternal is eternal, and what’s not enduring is enduring. You are saying what’s not essential is essential, something that ends is something that doesn’t end, and what’s not an escape is the escape that has no escape that goes beyond it, that’s supreme, marvelous, and exceptional. Brahmā, your [position] is in ignorance. Brahmā, your [position] is in ignorance.”
 {: #p16}
 
-17\. Brahmā then said to the Bhagavān, “Great sage, past mendicants and brahmins had very long life spans; they endured for a very long time. Great sage, your life has become short. It’s not like that of those mendicants and brahmins, not even the time they spent sitting in repose. What is the reason for that? Their knowledge was complete knowledge, and their vision was complete vision. If there really is an escape, then there’s no other escape beyond it that’s supreme, marvelous, and exceptional. If there really isn’t an escape, there’s still no other escape beyond it that’s supreme, marvelous, and exceptional.
+17\. Brahmā then said to the Bhagavān, “Great sage, past mendicants and priests had very long life spans; they endured for a very long time. Great sage, your life has become short. It’s not like that of those mendicants and priests, not even the time they spent sitting in repose. What is the reason for that? Their knowledge was complete knowledge, and their vision was complete vision. If there really is an escape, then there’s no other escape beyond it that’s supreme, marvelous, and exceptional. If there really isn’t an escape, there’s still no other escape beyond it that’s supreme, marvelous, and exceptional.
 {: #p17}
 
 18\. “Great sage, you thus won’t find the escape in an escape that isn’t perceived to be an escape or something that’s not an escape that’s perceived to be an escape, and then you’ll form a great delusion. What is the reason for that? You have no support.
 {: #p18}
 
-19\. “Great sage, if mendicants and brahmins love earth and praise earth, they’ll be subject to my authority, follow my wishes, and follow my servants. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, they are subject to my authority, follow my wishes, and follow my servants.
+19\. “Great sage, if mendicants and priests love earth and praise earth, they’ll be subject to my authority, follow my wishes, and follow my servants. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, they are subject to my authority, follow my wishes, and follow my servants.
 {: #p19}
 
 20\. “Great sage, if you love earth and praise earth, then you also will be subject to my authority, follow my wishes, and follow my servants. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, you also will be subject to my authority, follow my wishes, and follow my servants.”
 {: #p20}
 
-21\. The Bhagavān then told him, “Brahmā, so it is. What the Brahmā has said is true. If mendicants and brahmins love earth and praise earth, they will be subject to your authority, follow your wishes, and follow your servants. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, they will be subject to your authority, follow your wishes, and follow your servants.
+21\. The Bhagavān then told him, “Brahmā, so it is. What the Brahmā has said is true. If mendicants and priests love earth and praise earth, they will be subject to your authority, follow your wishes, and follow your servants. So it is with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, they will be subject to your authority, follow your wishes, and follow your servants.
 {: #p21}
 
 22\. “Brahmā, if I loved earth and praised earth, I also would be subject to your authority, follow your wishes, and follow your servants. So it would be with water, fire, air, spirits, gods, and the Lord Creator. Loving Brahmā and praising Brahmā, I also would be subject to your authority, follow your wishes, and follow your servants. Brahmā, if I accordingly loved and praised these eight things, it would so for each of them.
 {: #p22}
 
-23\. “Brahmā, I know the place from whence you came, the place to which you’ll go, and accordingly your abodes, ends, and births. If there were a Brahmā who possessed great supernormal powers, he would possess great majesty, great fortune, and great might.”
+23\. “Brahmā, I know the place from whence you came, the place to which you’ll go, and accordingly your abodes, ends, and births. If there were a Brahmā who possessed great supernormal abilities, he would possess great majesty, great fortune, and great might.”
 {: #p23}
 
 24\. Brahmā then said to the Bhagavān, “Great sage, how do you know what I know or see what I see? How do you know me so completely? Just as the sun is free to illuminate the regions of these thousand worlds, have you obtained such freedom in these thousand worlds? Do you know whether such-and-such a place is in day or night? Has the great sage already been through [those worlds] and passed through them often?”
@@ -107,10 +107,10 @@ next: MA_079.html
 30\. “Great sage, do you not suffer from a love of words? Asking these questions, I’m not aware of any increase in delusion. What is the reason for that? Because consciousness has a limitless domain, its knowledge is measureless, its vision is measureless, and its types of discernment are measureless. I know each discernment thus: ‘This earth I know is earth … water … fire … air … spirits … gods … Lord Creator … this Brahmā I know is Brahmā.”
 {: #p30}
 
-31\. The Bhagavān then told him, “Brahmā, if mendicants and brahmins have the perceptions of earth in earth that ‘earth is self,’ ‘earth belongs to self,’ or ‘self belongs to earth,’ that person supposing earth is self doesn’t know earth. So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa.[\[4\]](#n4){: #ref4} Having the perceptions of purity in purity that ‘purity is self,’ ‘purity belongs to self,’ or ‘self belongs to purity,’ that person supposing that purity is self doesn’t know purity.
+31\. The Bhagavān then told him, “Brahmā, if mendicants and priests have the perceptions of earth in earth that ‘earth is self,’ ‘earth belongs to self,’ or ‘self belongs to earth,’ that person supposing earth is self doesn’t know earth. So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa.[\[4\]](#n4){: #ref4} Having the perceptions of purity in purity that ‘purity is self,’ ‘purity belongs to self,’ or ‘self belongs to purity,’ that person supposing that purity is self doesn’t know purity.
 {: #p31}
 
-32\. “Brahmā, if mendicants and brahmins know of earth that earth is not the self, earth doesn’t belong to self, and self doesn’t belong to earth, then that person not supposing that earth is self knows earth. So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa. Knowing of purity that purity is not self, purity doesn’t belong to self, and self doesn’t belong to purity, that person not supposing that purity is self knows purity.
+32\. “Brahmā, if mendicants and priests know of earth that earth is not the self, earth doesn’t belong to self, and self doesn’t belong to earth, then that person not supposing that earth is self knows earth. So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa. Knowing of purity that purity is not self, purity doesn’t belong to self, and self doesn’t belong to purity, that person not supposing that purity is self knows purity.
 {: #p32}
 
 33\. “Brahmā, I know of earth that earth is not the self, earth doesn’t belong to self, and self doesn’t belong to earth. Not supposing that earth is self, I know earth. So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa. I know of purity that purity isn’t the self, purity doesn’t belong to self, and self doesn’t belong to purity. Not supposing that purity is self, I know purity.”
@@ -137,16 +137,16 @@ The Bhagavān told him, “Brahmā, if you want to conceal your form, then do as
 
 Brahmā said to the Bhagavān, “Great sage, if you want to conceal your form, then do as you like.”
 
-38\. The Bhagavān then thought, “Now, I’d rather manifest a manner of supernormal power and emit an incredible radiance that illuminates all the Brahma heavens to conceal where I stand. That will cause Brahmā and his retinue to hear my voice but not see my form.”
+38\. The Bhagavān then thought, “Now, I’d rather manifest a manner of supernormal ability and emit an incredible radiance that illuminates all the Brahma heavens to conceal where I stand. That will cause Brahmā and his retinue to hear my voice but not see my form.”
 {: #p38}
 
-39\. The Bhagavān then manifested a manner of supernormal power that emits an incredible radiance. It illuminated all the Brahma heavens and concealed where he stood. It made it so Brahmā and his retinue could hear his voice but not see his form.
+39\. The Bhagavān then manifested a manner of supernormal ability that emits an incredible radiance. It illuminated all the Brahma heavens and concealed where he stood. It made it so Brahmā and his retinue could hear his voice but not see his form.
 {: #p39}
 
-40\. Brahmā and his retinue each thought, “Amazing! The mendicant Gautama is amazing! He possesses great supernormal power, great majesty, great fortune, and great might. What is the reason for that? He’s emitting an incredible radiance that illuminates all the Brahma heavens and conceals where he stands. We and our retinues can hear his voice but not see his form.”
+40\. Brahmā and his retinue each thought, “Amazing! The mendicant Gautama is amazing! He possesses great supernormal abilities, great majesty, great fortune, and great might. What is the reason for that? He’s emitting an incredible radiance that illuminates all the Brahma heavens and conceals where he stands. We and our retinues can hear his voice but not see his form.”
 {: #p40}
 
-41\. The Bhagavān again thought, “I’ve converted this Brahmā and his retinue. Now, I’d rather collect my supernormal power.” The Bhagavān then collected his supernormal power, returning to stand in the Brahma heaven.
+41\. The Bhagavān again thought, “I’ve converted this Brahmā and his retinue. Now, I’d rather collect my supernormal ability.” The Bhagavān then collected his supernormal ability, returning to stand in the Brahma heaven.
 {: #p41}
 
 #### Māra Intervenes Again
@@ -154,7 +154,7 @@ Brahmā said to the Bhagavān, “Great sage, if you want to conceal your form, 
 42\. King Māra then was present in that assembly three times. It was then that King Māra said to the Bhagavān, “Great sage, you well see, well know, and well comprehend, but don’t advise or instruct disciples, and don’t teach Dharma for disciples. Don’t be attached to disciples. Don’t, for you’ll be born among the lowly entertainer spirits when your body breaks up and your life ends because you were attached to disciples. Practice doing nothing, and you’ll experience well-being in the present life. What is the reason for that? Great sage, these vanities are self-afflictions.
 {: #p42}
 
-43\. “Great sage, in the past mendicants and brahmins who advised their disciples, instructed their disciples, and taught Dharma for their disciples became attached to their disciples. They were born among some lowly entertainer spirits when their bodies broke up and their lives ended because they were attached to their disciples. Therefore, great sage, I say to you, don’t advise and instruct disciples, don’t teach Dharma for disciples, and don’t become attached to disciples. You’ll be born among the lowly entertainer spirits when your body breaks up and your life ends because you’re attached to disciples. Practice doing nothing, and you’ll experience well-being in this life. What’s the reason for that? Great sage, these vanities are self-afflictions.”
+43\. “Great sage, in the past mendicants and priests who advised their disciples, instructed their disciples, and taught Dharma for their disciples became attached to their disciples. They were born among some lowly entertainer spirits when their bodies broke up and their lives ended because they were attached to their disciples. Therefore, great sage, I say to you, don’t advise and instruct disciples, don’t teach Dharma for disciples, and don’t become attached to disciples. You’ll be born among the lowly entertainer spirits when your body breaks up and your life ends because you’re attached to disciples. Practice doing nothing, and you’ll experience well-being in this life. What’s the reason for that? Great sage, these vanities are self-afflictions.”
 {: #p43}
 
 44\. The Bhagavān then told him, “Māra Pāpīyān, you speak not for my gain, not for my happiness, nor for my comfort but to ensure I won’t pursue my goal, [so you say:] ‘Don’t advise and instruct disciples, don’t teach Dharma for disciples, and don’t become attached to disciples. You’ll be born among the lowly entertainer spirits when your body breaks up and your life ends because you’ll be attached to disciples. Practice doing nothing, and you’ll experience well-being in this life. What’s the reason for that? Great sage, these vanities are self-afflictions.’
@@ -163,10 +163,10 @@ Brahmā said to the Bhagavān, “Great sage, if you want to conceal your form, 
 45\. “Māra Pāpīyān, you think: ‘This mendicant Gautama teaches Dharma for his disciples. Hearing the Dharma, those disciples will leave my domain.’ Māra Pāpīyān, you therefore now tell me, ‘Don’t advise and instruct disciples, don’t teach Dharma for disciples, and don’t become attached to disciples. You’ll be born among the lowly entertainer spirits when your body breaks up and your life ends because you’ll be attached to disciples. Practice doing nothing, and you’ll experience well-being in this life. What’s the reason for that? Great sage, these vanities are self-afflictions.’
 {: #p45}
 
-46\. “Māra Pāpīyān, if mendicants and brahmins advise disciples, instruct disciples, teach Dharma for disciples, and become attached to disciples, then they’ll be born among some lowly entertainer spirits when their bodies break up and their lives end because they are attached to their disciples. Those mendicants and brahmins are not mendicants or brahmins but claim to be mendicants or brahmins. They are not arhats or fully awakened ones but claim to be arhats or fully awakened ones.
+46\. “Māra Pāpīyān, if mendicants and priests advise disciples, instruct disciples, teach Dharma for disciples, and become attached to disciples, then they’ll be born among some lowly entertainer spirits when their bodies break up and their lives end because they are attached to their disciples. Those mendicants and priests are not mendicants or priests but claim to be mendicants or priests. They are not arhats or fully awakened ones but claim to be arhats or fully awakened ones.
 {: #p46}
 
-47\. “Māra Pāpīyān, I really am a mendicant who claims to a mendicant, and I really am a brahmin who claims to be a brahmin. I really am an arhat who claims to be an arhat, and I really am a fully awakened one who claims to be a fully awakened one. Māra Pāpīyān, whether or not I teach Dharma for disciples, you may take your leave. I know for myself whether or not I should teach Dharma for disciples.”
+47\. “Māra Pāpīyān, I really am a mendicant who claims to a mendicant, and I really am a priest who claims to be a priest. I really am an arhat who claims to be an arhat, and I really am a fully awakened one who claims to be a fully awakened one. Māra Pāpīyān, whether or not I teach Dharma for disciples, you may take your leave. I know for myself whether or not I should teach Dharma for disciples.”
 {: #p47}
 
 #### Conclusion
