--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -47,7 +47,7 @@ next: MA_003.html
 11\. “Furthermore, he parts with desire and parts with bad and unwholesome things.[\[7\]](#n6){:#ref6} With perception and contemplation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back.’ He’s like the leaves growing back on the Trāyastriṃśa Heaven’s pārijāta tree.
 {: #p11}
 
-12\. “Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
+12\. “Furthermore, once perception and contemplation have stopped, the noble disciple possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 {: #p12}
 
 13\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness, which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness.[\[8\]](#n7){:#ref7} He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
