--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -10,100 +10,140 @@ next: MA_004.html
 ## [Chapter 1: Sevens](index.html)
 ### 3. The City Parable
 
-Thus I have heard:[\[1\]](#n1){#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+{: #p1}
 
 #### A King’s Border City
 
-It was then that the Bhagavān addressed the monks, “Suppose a king’s border city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. Because of this, that king’s city is not defeated by outside enemies but only by internal sabotage.
+2\. It was then that the Bhagavān addressed the monks, “Suppose a king’s border city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. Because of this, that king’s city is not defeated by external enemies but only by internal sabotage.
+{: #p2}
 
-“What are the seven things with which the king’s border city is fully endowed? It means the king’s border city erects towers, ramming [their beams] into the ground to make them sturdy and indestructible. Those inside are made secure, and outside enemies are kept at bay. This is called the first thing with which the king’s city is fully endowed.
+3\. “What are the seven things with which the king’s border city is fully endowed? It means the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. This is called the first thing with which the king’s city is fully endowed.
+{: #p3}
 
-“Furthermore, suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and outside enemies are kept at bay. This is called the second thing with which the king’s city is fully endowed.
+4\. “Furthermore, suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and external enemies are kept at bay. This is called the second thing with which the king’s city is fully endowed.
+{: #p4}
 
-“Furthermore, suppose the king’s border city lays a road around it that’s cleared, level, and wide. Those inside are made secure, and outside enemies are kept at bay. This is called the third thing with which the king’s city is fully endowed.
+5\. “Furthermore, suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside are made secure, and external enemies are kept at bay. This is called the third thing with which the king’s city is fully endowed.
+{: #p5}
 
-“Furthermore, suppose the king’s border city gathers a fourfold army: an elephant army, a cavalry army, a chariot army, and an infantry army. Those inside are made secure, and outside enemies are kept at bay. This is called the fourth thing with which the king’s city is fully endowed.
+6\. “Furthermore, suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside are made secure, and external enemies are kept at bay. This is called the fourth thing with which the king’s city is fully endowed.
+{: #p6}
 
-“Furthermore, suppose the king’s border city prepares military supplies, such as bows, arrows, spears, and pikes. Those inside are made secure, and outside enemies are kept at bay. This is called the fifth thing with which the king’s city is fully endowed.
+7\. “Furthermore, suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside are made secure, and external enemies are kept at bay. This is called the fifth thing with which the king’s city is fully endowed.
+{: #p7}
 
-“Furthermore, suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and outside enemies are kept at bay. This is called the sixth thing with which the king’s city is fully endowed.
+8\. “Furthermore, suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and external enemies are kept at bay. This is called the sixth thing with which the king’s city is fully endowed.
+{: #p8}
 
-“Furthermore, suppose the king’s border city builds a high wall, making it quite strong and coating it with plaster. Those inside are made secure, and outside enemies are kept at bay. This is called the seventh thing with which the king’s city is fully endowed.
+9\. “Furthermore, suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside are made secure, and external enemies are kept at bay. This is called the seventh thing with which the king’s city is fully endowed.
+{: #p9}
 
-“What is the abundance of four foods in the king’s city, which are easy and not difficult to obtain? It means the king’s border city provides for a reserve of water, hay, [423a] and firewood. Those inside are made secure, and outside enemies are kept at bay. This is called the first abundance of food in the king’s city, which is easy and not difficult to obtain.
+10\. “What is the abundance of four foods in the king’s city, which are easy and not difficult to obtain? It means the king’s border city provides for a reserve of water, hay, [423a] and firewood. Those inside are made secure, and external enemies are kept at bay. This is called the first abundance of food in the king’s city, which is easy and not difficult to obtain.
+{: #p10}
 
-“Furthermore, suppose the king’s border city harvests much rice and stockpiles barley. Those inside are made secure, and outside enemies are kept at bay. This is called the second abundance of food in the king’s city, which is easy and not difficult to obtain.
+11\. “Furthermore, suppose the king’s border city collects much rice and stockpiles barley. Those inside are made secure, and external enemies are kept at bay. This is called the second abundance of food in the king’s city, which is easy and not difficult to obtain.
+{: #p11}
 
-“Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.[\[2\]](#n2){#ref2} Those inside are made secure, and outside enemies are kept at bay. This is called the third abundance of food in the king’s city, which is easy and not difficult to obtain.
+12\. “Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.[\[2\]](#n2){: #ref2} Those inside are made secure, and external enemies are kept at bay. This is called the third abundance of food in the king’s city, which is easy and not difficult to obtain.
+{: #p12}
 
-“Furthermore, suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, and they are all plentiful. Those inside are made secure, and outside enemies are kept at bay. This is called the fourth abundance of food in the king’s city, which is easy and not difficult to obtain.
+13\. “Furthermore, suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside are made secure, and external enemies are kept at bay. This is called the fourth abundance of food in the king’s city, which is easy and not difficult to obtain.
+{: #p13}
 
-“Thus, the king’s city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. It is not defeated by outside enemies but only by internal sabotage.
+14\. “Thus, the king’s city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. It’s not defeated by external enemies but only by internal sabotage.
+{: #p14}
 
 #### The Noble Disciple
 
-“Thus, suppose a noble disciple also attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. Because of this, King Māra doesn’t get an advantage over him, and the noble disciple doesn’t follow bad and unwholesome things. Not being stained by defilements, he’s no longer subject to birth.
+15\. “Thus, suppose a noble disciple also attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. Because of this, King Māra doesn’t get an advantage over him, and the noble disciple doesn’t follow bad and unwholesome things. Not being stained by defilements, he’ll no longer be subject to birth.
+{: #p15}
 
-“What are the seven good qualities attained by the noble disciple? It means the noble disciple attains a resolute belief that’s deeply attached to the Tathāgata. Once he has established the faculty of belief, he will never follow outside mendicants and brahmins,  nor gods, Māra, Brahmā, or any other worldly being. This is called the first good quality attained by the noble disciple.
+16\. “What are the seven good qualities attained by the noble disciple? It means the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside mendicants and priests,[\[3\]](#n3){: #ref3} nor gods, Māra, Brahmā, or any other worldly being. This is called the first good quality attained by the noble disciple.
+{: #p16}
 
-“Furthermore, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which are the experience of bad consequences and create the basis of birth-and-death. This is called the second good quality attained by the noble disciple.
+17\. “Furthermore, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the second good quality attained by the noble disciple.
+{: #p17}
 
-“Furthermore, the noble disciple always conducts himself with modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which are the experience of bad consequences and create the basis of birth-and-death. This is called the third good quality attained by the noble disciple.
+18\. “Furthermore, the noble disciple always conducts himself with modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the third good quality attained by the noble disciple.
+{: #p18}
 
-“Furthermore, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the fourth good quality attained by the noble disciple.
+19\. “Furthermore, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the fourth good quality attained by the noble disciple.
+{: #p19}
 
-“Furthermore, the noble disciple widely learns and is well versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with insight. This is called the fifth good quality attained by the noble disciple.
+20\. “Furthermore, the noble disciple widely learns and is well-versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the fifth good quality attained by the noble disciple.
+{: #p20}
 
-“Furthermore, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago [423b] and what was heard long ago. This is called the sixth good quality attained by the noble disciple.
+21\. “Furthermore, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago [423b] and what was heard long ago. This is called the sixth good quality attained by the noble disciple.
+{: #p21}
 
-“Furthermore, the noble disciple cultivates wisdom. He contemplates the law of arising and passing away, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the seventh good quality attained by the noble disciple.
+22\. “Furthermore, the noble disciple cultivates wisdom. He contemplates the law of arising and decay, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the seventh good quality attained by the noble disciple.
+{: #p22}
 
-“How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? It means the noble disciple parts with desire and parts with bad and unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+23\. “How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? It means the noble disciple parts with desire and parts with bad and unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+{: #p23}
 
-“Furthermore, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and happiness, and he acquires the accomplishment of the second meditation. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+24\. “Furthermore, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he acquires the accomplishment of the second meditation. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+{: #p24}
 
-“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness. He acquires the accomplishment of the third meditation. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+25\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness. He acquires the accomplishment of the third meditation. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+{: #p25}
 
-“Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+26\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+{: #p26}
 
-“Thus does the noble disciple attain seven good qualities and acquire four progressive mental states that are easy and not difficult to attain. King Māra doesn’t get an advantage over him, and he doesn’t follow evil and unwholesome things. Not being stained by defilements, he’s no longer subject to birth.
+27\. “Thus does the noble disciple attain seven good qualities and acquire four progressive mental states that are easy and not difficult to attain. King Māra doesn’t get an advantage over him, and he doesn’t follow bad and unwholesome things. Not being stained by defilements, he’ll no longer be subject to birth.
+{: #p27}
 
 #### The Noble Disciple Is Like the King’s Border City
 
-“Suppose the king’s border city erects towers, ramming [their beams] into the ground to make them sturdy and indestructible. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple attains a resolute belief that’s deeply attached to the Tathāgata. Once he has established the faculty of belief, he will never follow outside mendicants and brahmins, nor gods, Māra, Brahmā, or any other worldly being. This is called the tower of belief attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+28\. “Suppose the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside mendicants and priests, nor gods, Māra, Brahmā, or any other worldly being. This is called the noble disciple attaining the tower of faith, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p28}
 
-“Suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which are the experience of bad consequences and create the basis of birth-and-death. This is called the moat of conscience attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+29\. “Suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the moat of conscience, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p29}
 
-“Suppose the king’s border city lays a road around it that’s cleared, level, and wide. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple always conducts himself with [423c] modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which are the experience of bad consequences and create the basis of birth-and-death. This is called the level road of modesty attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+30\. “Suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with [423c] modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the level road of modesty, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p30}
 
-“Suppose the king’s border city gathers a fourfold army: an elephant army, a cavalry army, a chariot army, and an infantry army. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the military strength of energy attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+31\. “Suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the noble disciple attaining the army of energy, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p31}
 
-“Suppose the king’s border city prepares military supplies, such as bows, arrows, spears, and pikes. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple widely learns and is well versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with insight. This is called the military supply of being well versed attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+32\. “Suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple widely learns and is well-versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the noble disciple attaining the armaments of being well-versed, which remove what’s bad and unwholesome and cultivate good qualities.
+{: #p32}
 
-“Suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago and what was heard long ago. This is called the commander of mindfulness who guards the entrances that’s attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+33\. “Suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago and what was heard long ago. This is called the noble disciple attaining the commander of mindfulness that guards the entrances, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p33}
 
-“Suppose the king’s border city builds a high wall, making it quite strong and coating it with plaster. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple cultivates wisdom. He contemplates the law of arising and passing away, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the wall of wisdom attained by the noble disciple, which removes what’s bad and unwholesome and cultivates good qualities.
+34\. “Suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple cultivates wisdom. He contemplates the law of arising and decay, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the noble disciple attaining the wall of wisdom, which removes what’s bad and unwholesome and cultivates good qualities.
+{: #p34}
 
-“Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple parts with desire and parts with bad or unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. He lives happily without want. Secure and happy, he brings about Nirvāṇa naturally.
+35\. “Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with desire and parts with bad or unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+{: #p35}
 
-“Suppose the king’s border city harvests much rice and stockpiles barley. Those inside are made secure, and outside enemies are kept at bay. Thus, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind without perception or contemplation. This concentration produces joy and [424a] happiness, and he acquires the accomplishment of the second meditation. He lives happily without want. Secure and happy, he brings about Nirvāṇa naturally.
+36\. “Suppose the king’s border city harvests much rice and stockpiles barley. Those inside are made secure, and external enemies are kept at bay. Thus, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and [424a] happiness, and he acquires the accomplishment of the second meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+{: #p36}
 
-“Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He acquires the accomplishment of the third meditation. He lives happily without want. Secure and happy, he brings about Nirvāṇa naturally.
+37\. “Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He acquires the accomplishment of the third meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+{: #p37}
 
-“Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, and they are all plentiful. Those inside are made secure, and outside enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. He lives happily without want. Secure and happy, he brings about Nirvāṇa naturally.”
+38\. “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.”
+{: #p38}
 
-The Buddha spoke thus. The monks who heard what the Buddha had taught rejoiced and handed it down.
+39\. The Buddha spoke thus. The monks who heard what the Buddha taught rejoiced and handed it down.
+{: #p39}
 
 ### Notes
 
 1. {:#n1} Parallels include AN 7.67 and EA 39.4. [\[Back\]](#ref1)
 2. {:#n2} *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#ref2)
+3. {:#n3} *outside mendicants and priests*. “Outside” means those who belonged to others sects and philosophies that did follow the Buddha’s teaching. [\[Back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 24 February 2020
+Last Revised: 1 May 2020
 {: .revised}
 
 ---
