--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
@@ -65,7 +65,7 @@ They answered, “Associating with bad friends is its cultivation.”
 They answered, “Bad people are its cultivation.”
 {: #p12}
 
-13\. “Having been endowed with bad people, one is readily endowed with association with bad friends. Having been endowed with association with bad friends, one is readily endowed with hearing bad teachings. Having heard bad teachings, one is readily endowed with disbelief. Having been endowed with the arising of disbelief, one is readily endowed with incorrect thinking. Having been endowed with incorrect thinking, one is readily endowed with incorrect mindfulness and incorrect knowledge. Having being endowed with incorrect mindfulness and incorrect knowledge, one is readily endowed with unguarded faculties. Having been endowed with unguarded faculties, one is readily endowed with the three bad conducts. Having been endowed with the three bad conducts, one is readily endowed with the five hindrances. Having been endowed with the five hindrances, one is readily endowed with ignorance. Having been endowed with ignorance, one is readily endowed with the craving for existence. Thus, this craving for existence develops and becomes fully formed.
+13\. “Having been endowed with bad people, one is readily endowed with association with bad friends. Having been endowed with association with bad friends, one is readily endowed with hearing bad teachings. Having heard bad teachings, one is readily endowed with disbelief. Having been endowed with the arising of disbelief, one is readily endowed with incorrect thinking. Having been endowed with incorrect thinking, one is readily endowed with incorrect mindfulness and incorrect knowledge. Having been endowed with incorrect mindfulness and incorrect knowledge, one is readily endowed with unguarded faculties. Having been endowed with unguarded faculties, one is readily endowed with the three bad conducts. Having been endowed with the three bad conducts, one is readily endowed with the five hindrances. Having been endowed with the five hindrances, one is readily endowed with ignorance. Having been endowed with ignorance, one is readily endowed with the craving for existence. Thus, this craving for existence develops and becomes fully formed.
 {: #p13}
 
 14\. “Insight and liberation also have their cultivation; they’re not without cultivation. What’s called the cultivation of insight and liberation?”
