--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
@@ -117,7 +117,7 @@ They answered, “Associating with good friends is its cultivation.”
 They answered, “Good people are its cultivation.”
 {: #p23}
 
-24\. “Having been endowed with good people, one is readily endowed with association with good friends. Having been endowed with association with good friends, one is readily endowed with hearing the good teaching. Having heard the good teaching, one is readily endowed with faith. Having been endowed with the arising of faith, one is readily endowed with right thinking. Having been endowed with right thinking, one is readily endowed with right mindfulness and right knowledge. Having being endowed with right mindfulness and right knowledge, one is readily endowed with guarded faculties. Having been endowed with guarded faculties, one is readily endowed with the three marvelous conducts. Having been endowed with the three marvelous conducts, one is readily endowed with the four abodes of mindfulness. Having been endowed with the four abodes of mindfulness, one is readily endowed with the seven factors of awakening. Having been endowed with the seven factors of awakening, one is readily endowed with insight and liberation. Thus, this insight and liberation develops and becomes fully formed.”
+24\. “Having been endowed with good people, one is readily endowed with association with good friends. Having been endowed with association with good friends, one is readily endowed with hearing the good teaching. Having heard the good teaching, one is readily endowed with faith. Having been endowed with the arising of faith, one is readily endowed with right thinking. Having been endowed with right thinking, one is readily endowed with right mindfulness and right knowledge. Having been endowed with right mindfulness and right knowledge, one is readily endowed with guarded faculties. Having been endowed with guarded faculties, one is readily endowed with the three marvelous conducts. Having been endowed with the three marvelous conducts, one is readily endowed with the four abodes of mindfulness. Having been endowed with the four abodes of mindfulness, one is readily endowed with the seven factors of awakening. Having been endowed with the seven factors of awakening, one is readily endowed with insight and liberation. Thus, this insight and liberation develops and becomes fully formed.”
 {: #p24}
 
 25\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and handed it down.
